--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~51.0.8",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-sqlite-storage": "^6.0.1",
-    "expo-router": "~3.5.14",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-popover-view": "^5.1.8",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2"
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
