--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-menu/menu": "^1.1.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
