--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-font": "~12.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
