--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.15",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-popover-view": "^5.1.8",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-font": "~12.0.6"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.24.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
