--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react-native": "0.74.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-popover-view": "^5.1.8",
+    "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
