--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-popover-view": "^5.1.8",
-    "react-native-reanimated": "^3.12.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.2.0",
     "react-native-swipeable": "^0.6.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "victory-native": "^37.0.3-next.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
