--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-date-picker": "^5.0.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.16.1",
