--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-menu/menu": "^1.1.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.2",
@@ -22,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-date-picker": "^5.0.4",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-draggable-grid": "^2.2.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -33,8 +36,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "victory-native": "^37.0.3-next.0",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "victory-native": "^37.0.3-next.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
