--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-calendars": "^1.1305.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draggable-grid": "^2.2.1",
