--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-popover-view": "^5.1.8",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
