--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-sound-player": "^0.14.3",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.2.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "victory-native": "^37.0.3-next.0"
+    "victory-native": "^37.0.3-next.0",
+    "expo-av": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
