--- a/app.json
+++ b/app.json
@@ -11,12 +11,10 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#fff"
-      
     },
     "ios": {
-      "supportsTablet": true
-      
-      
+      "supportsTablet": true,
+      "bundleIdentifier": "com.expogettest.MyPower"
     },
     "android": {
       "adaptiveIcon": {
@@ -30,6 +28,14 @@
     "plugins": [
       "expo-router",
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "3657286a-71ef-4124-b434-14013333aa3d"
+      }
+    }
   }
 }
