--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@react-native-menu/menu": "^1.1.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
-    "expo-sqlite": "~14.0.3",
+    "expo-router": "~3.5.18",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-calendars": "^1.1305.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-draggable-flatlist": "^4.0.1",
@@ -36,7 +36,7 @@
     "react-native-screens": "3.31.1",
     "react-native-sound-player": "^0.14.3",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.2.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^10.1.0",
     "victory-native": "^37.0.3-next.0",
