--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-menu/menu": "^1.1.0",
     "expo": "~51.0.8",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -22,6 +23,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-calendars": "^1.1305.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-draggable-flatlist": "^4.0.1",
@@ -39,8 +41,7 @@
     "react-native-svg": "15.2.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^10.1.0",
-    "victory-native": "^37.0.3-next.0",
-    "expo-av": "~14.0.6"
+    "victory-native": "^37.0.3-next.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
